<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_locatin_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:paddingBottom="5dp"
                android:text="@string/current_locatin_title"/>

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/date"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:id="@+id/current_weather_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sun"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/current_weather_card_view_description"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/temperature_title"/>

                        <TextView
                            android:id="@+id/temp_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="32°C" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind_title"/>
                        <TextView
                            android:id="@+id/wind_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="32 km/h"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity_title"/>
                        <TextView
                            android:id="@+id/humidity_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="75%"/>
                    </LinearLayout>

                </LinearLayout>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="25sp"
                android:text="@string/today_title"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="15dp"
                android:id="@+id/rv_hours_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/hourly_weather"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="15dp"
                android:id="@+id/rv_weekly_weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/weekly_weather"
                />

        </LinearLayout>

    </ScrollView>


</FrameLayout>